fix: overflow admin poll popin

--- a/client_lourd/src/app/components/general-elements/poll-related/poll-admin-pop-in/poll-admin-pop-in.component.scss
+++ b/client_lourd/src/app/components/general-elements/poll-related/poll-admin-pop-in/poll-admin-pop-in.component.scss
@@ -52,7 +52,7 @@
     .popin-content {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 1rem;
         align-items: center;
         position: relative;
         height: 85%;
@@ -63,18 +63,23 @@
 
         &::-webkit-scrollbar {
             width: 8px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
 
         &::-webkit-scrollbar-track {
             background: color-mix(in srgb, var(--primary-color) 20%, transparent);
             border-radius: 4px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
 
         &::-webkit-scrollbar-thumb {
             background: var(--tertiary-color);
             border-radius: 4px;
             border: 2px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
-
+            margin-top: 30px;
+            margin-bottom: 30px;
             &:hover {
                 background: var(--secondary-color);
             }
@@ -94,6 +99,7 @@
         .poll-questions {
             width: 100%;
             padding: 20px;
+            height: 80%;
             position: relative;
             display: flex;
             flex-direction: column;
